Update technologies section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -156,7 +156,6 @@ main
 
 		font-size: 4rem
 		text-align: center
-
 	h2
 
 		font-size: 2rem
@@ -165,11 +164,6 @@ main
 		&:hover
 			color: $orange
 			font-size: 2.5rem
-	p
-
-		font-size: 1.5rem
-		padding: 0.5rem
-		margin: 0.5rem
 
 	section#a-propos
 		height: fit-content
@@ -296,14 +290,16 @@ main
 		height: fit-content
 
 		.card-tech
-			color: $noir
 			background-color: $blanc
+			border: 2px solid $orange
+			border-radius: $radius-card
+			color: $noir
 			display: flex
 			flex-direction: column
 			align-items: center
 			justify-content: space-between
-			border: 2px solid $orange
 			box-shadow: 2px 7px 6px -6px rgba(0,0,0,0.75)
+			margin: 10px
 
 			ul
 				border-radius: $radius-card
