--- a/sass/style.css
+++ b/sass/style.css
@@ -27,7 +27,7 @@ body #btn-arrow {
   border-radius: 50%;
   position: fixed;
   bottom: 20px;
-  right: 50px;
+  right: 20px;
   width: 3rem;
   height: 3rem;
   display: flex;
@@ -40,8 +40,19 @@ body #btn-arrow svg {
      object-fit: contain;
   margin: 0.5rem;
 }
-
-header, footer {
+body #divPopup {
+  display: none;
+  position: absolute;
+  top: 10vh;
+  left: 10vh;
+  z-index: 1000;
+  background-color: #ffffff;
+  border: 2px solid #D94423;
+  border-radius: 8px;
+  width: 200px;
+  height: 200px;
+}
+body header, body footer {
   background-color: #D94423;
 }
 
@@ -146,10 +157,10 @@ nav ul li p {
 main section {
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding-top: 10vh;
   height: 100vh;
   width: 100vw;
+  border-bottom: 2px solid rgb(250, 250, 250);
 }
 main section#accueil {
   display: flex;
@@ -159,7 +170,7 @@ main section#accueil {
   justify-content: center;
 }
 main h1 {
-  font-size: 24px;
+  font-size: 4rem;
   text-align: center;
 }
 main h2 {
@@ -171,37 +182,61 @@ main h2:hover {
   color: #D94423;
   font-size: 2.5rem;
 }
-main p {
-  font-size: 1.5rem;
-  padding: 0.5rem;
+main section#a-propos {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+main section#a-propos .flex-col-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main section#a-propos .box {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+main section#a-propos .year {
+  color: #D94423;
+  font-size: 1rem;
+  padding: 0px;
+}
+main section#a-propos .bullet {
+  background-color: #D94423;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  z-index: 10;
   margin: 0.5rem;
 }
-main section#a-propos {
-  height: 100vh;
-}
-main section#a-propos .parcours {
-  display: flex;
-  flex-wrap: wrap;
+main section#a-propos .line {
+  background-color: #ffffff;
+  width: 2px;
+  height: 80px;
 }
 main section#a-propos .job-card {
   background-color: #ffffff;
   border-radius: 8px;
   border: 2px solid #D94423;
   color: #0D0D0D;
-  margin: 1rem;
+  height: 100%;
+  width: 300px;
+  margin: 0.5rem;
   padding: 0.5rem;
-  box-shadow: 2px 7px 6px -6px rgba(0, 0, 0, 0.75);
 }
 main section#a-propos .job-card h3 {
+  font-size: 1rem;
   color: #D94423;
+  display: inline-block;
+}
+main section#a-propos .job-card p {
+  font-size: 1rem;
+  padding: 0px;
 }
 main section#a-propos .job-card ul {
   display: flex;
   list-style-type: none;
   flex-direction: column;
-}
-main section#a-propos .line {
-  background-color: #000;
 }
 main section#projets {
   height: -moz-fit-content;
@@ -273,14 +308,16 @@ main section#technologies {
   height: fit-content;
 }
 main section#technologies .card-tech {
-  color: #0D0D0D;
   background-color: #ffffff;
+  border: 2px solid #D94423;
+  border-radius: 8px;
+  color: #0D0D0D;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  border: 2px solid #D94423;
   box-shadow: 2px 7px 6px -6px rgba(0, 0, 0, 0.75);
+  margin: 10px;
 }
 main section#technologies .card-tech ul {
   border-radius: 8px;
@@ -372,15 +409,5 @@ footer {
 @media screen and (min-width: 992px) {
   header, footer {
     background-color: #D94423;
-  }
-}
-@media screen and (min-width: 1200px) {
-  header, footer {
-    background-color: #d410ee;
-  }
-}
-@media screen and (min-width: 1400px) {
-  header, footer {
-    background-color: #0D0D0D;
   }
 }/*# sourceMappingURL=style.css.map */
