--- a/sass/style.sass
+++ b/sass/style.sass
@@ -152,18 +152,22 @@ main
 		align-items: center
 		justify-content: center
 
-	h1
+		h1
+			font-size: 4rem
+			text-align: center
 
-		font-size: 4rem
-		text-align: center
-	h2
+		h2
+			font-size: 2rem
+			padding: 0.5rem
+			margin: 0.5rem
 
-		font-size: 2rem
-		padding: 0.5rem
-		margin: 0.5rem
 		&:hover
 			color: $orange
 			font-size: 2.5rem
+		p
+			width: 100%
+			text-align: justify
+			padding: 20px
 
 	section#a-propos
 		height: fit-content
