--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Roboto&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
 html
     widows: 100%
 body,ul,li,h2,h3,p,a
