--- a/sass/style.sass
+++ b/sass/style.sass
@@ -47,9 +47,7 @@ header
 	position: fixed
 	display: flex
 	justify-content: space-between
-
 	z-index: 99
-
 	div
 		display: flex
 		justify-content: center
@@ -122,8 +120,7 @@ nav
 				color: $noir
 				text-decoration: none
 				padding: 1rem
-				&:hover
-					color: $orange
+
 				img
 
 					width: 2rem
@@ -135,37 +132,31 @@ nav
 main
 
 	section
-		//background-image: url("/assets/imgs/ciel-etoile.jpg")
-
 		display: flex
 		flex-direction: column
-
 		padding-top: $height-header
 		height: 100vh
 		width: 100vw
-		border-bottom: 2px solid rgba(250, 250 , 250, 1)
+		/*border-bottom: 2px solid rgba(250, 250 , 250, 1)*/
 
 	section#accueil
 		display: flex
 		flex-direction: column
 		color: $blanc
 		align-items: center
-		justify-content: center
 
 		h1
-			font-size: 4rem
+			font-size: 3rem
 			text-align: center
 
 		h2
+			color: $jaune
 			font-size: 2rem
 			padding: 0.5rem
 			margin: 0.5rem
 
-		&:hover
-			color: $orange
-			font-size: 2.5rem
 		p
-			width: 100%
+			width: 80%
 			text-align: justify
 			padding: 20px
 
@@ -328,24 +319,34 @@ main
 						height: 50px
 
 	section#contact
+		height: fit-content
+		display: flex
+		flex-direction: column
+		align-items: center
+		justify-content: space-around
 
+		width: 100%
+		h2
+			text-align: center
+			padding: 1rem
+		p
+			padding: 1rem
 		form
 			height: fit-content
 			display: flex
 			flex-direction: column
+			width: 100%
 
-			width: 75%
-			padding: 0.5rem
 			label
 				padding: 1rem 0.5rem
 			input
-				padding: 1rem 0.5rem
+				padding: 0.5rem 1rem
 			button
 				border-radius: 8px
 				padding: 1rem 0
 				margin: 1rem 0
 				background-color: $bleu
-				width: 90%
+				width: 100%
 
 footer
 	text-align: center
@@ -380,6 +381,10 @@ footer
 		ul
 			display: flex
 			flex-direction: row
+			img
+
+				height: 25px
+				width: 25px
 
 @media screen and (min-width: 992px)
 	header, footer
