--- a/sass/style.css
+++ b/sass/style.css
@@ -16,7 +16,7 @@ body, ul, li, h2, h3, p, a {
 /* Pour les écran inférieur à 361 px */
 body {
   color: #ffffff;
-  background-color: #110f0f;
+  background-color: #333;
 }
 body .light-mode {
   color: #0D0D0D;
@@ -163,6 +163,8 @@ main section {
   /*border-bottom: 2px solid rgba(250, 250 , 250, 1)*/
 }
 main section#accueil {
+  background-image: linear-gradient(rgba(51, 51, 51, 0.9), rgb(51, 51, 51)), url(/assets/imgs/javascriptcode.jpg);
+  background-position: center;
   display: flex;
   flex-direction: column;
   color: #ffffff;
@@ -182,6 +184,7 @@ main section#accueil p {
   width: 80%;
   text-align: justify;
   padding: 20px;
+  font-size: 1.5rem;
 }
 main section#a-propos {
   height: -moz-fit-content;
@@ -372,6 +375,9 @@ main section#contact form textarea {
   height: 200px;
 }
 main section#contact form button {
+  color: #ffffff;
+  font-size: 1rem;
+  font-weight: bold;
   border-radius: 8px;
   padding: 1rem 0;
   margin: 2rem 0;
