--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,7 +3,8 @@
 /* Pour les écran inférieur à 361 px */
 body
 	color: $blanc
-	background-color: #110f0f
+	background-color: #333
+
 	.light-mode
 		color: $noir
 		background-color: $blanc
@@ -144,6 +145,9 @@ main
 		/*border-bottom: 2px solid rgba(250, 250 , 250, 1)*/
 
 	section#accueil
+		//background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(/assets/imgs/project.jpg)
+		background-image: linear-gradient(rgba(51, 51, 51, 0.9), rgba(51, 51, 51, 1)),url(/assets/imgs/javascriptcode.jpg)
+		background-position: center
 		display: flex
 		flex-direction: column
 		color: $blanc
@@ -163,6 +167,7 @@ main
 			width: 80%
 			text-align: justify
 			padding: 20px
+			font-size: 1.5rem
 
 	section#a-propos
 		height: fit-content
@@ -345,6 +350,9 @@ main
 				padding: 0.5rem 0.5rem
 				height: 200px
 			button
+				color: $blanc
+				font-size: 1rem
+				font-weight: bold
 				border-radius: 8px
 				padding: 1rem 0
 				margin: 2rem 0
