--- a/sass/style.sass
+++ b/sass/style.sass
@@ -145,7 +145,7 @@ main
 		/*border-bottom: 2px solid rgba(250, 250 , 250, 1)*/
 
 	section#accueil
-		//background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(/assets/imgs/project.jpg)
+
 		background-image: linear-gradient(rgba(51, 51, 51, 0.9), rgba(51, 51, 51, 1)),url(/assets/imgs/javascriptcode.jpg)
 		background-position: center
 		display: flex
@@ -165,8 +165,8 @@ main
 
 		p
 			width: 80%
-			text-align: justify
-			padding: 20px
+			text-align: center
+			padding: 5px 20px
 			font-size: 1.5rem
 
 	section#a-propos
@@ -333,22 +333,24 @@ main
 		display: flex
 		flex-direction: column
 		p
-			padding: 1rem
+			padding: 0.5rem
 		form
 
 			display: flex
 			flex-direction: column
 			align-content: center
-			margin: 2rem
+			margin: 0.5rem
 
 			label
-				padding: 1rem 0.5rem
+				padding: 0.5rem 0.5rem
 			input
 				padding: 0.5rem 1rem
+				border-radius: 8px
 			textarea
+				border-radius: 8px
 				font-size: 1rem
 				padding: 0.5rem 0.5rem
-				height: 200px
+				height: 150px
 			button
 				color: $blanc
 				font-size: 1rem
