--- a/sass/style.sass
+++ b/sass/style.sass
@@ -365,10 +365,8 @@ footer
 
 /* Pour les écrans supérieur à 375 px*/
 @media screen and (min-width: 576px)
-	header, footer
-		background-color: $bleu
 
-@media screen and (min-width: 768px)
+//@media screen and (min-width: 768px)
 	header
 		background-color: $jaune
 		display: flex
@@ -394,10 +392,25 @@ footer
 		ul
 			display: flex
 			flex-direction: row
+			font-size: 16px
 			img
 
-				height: 25px
-				width: 25px
+				height: 20px
+				width: 20px
+	main
+		#technologies
+			div#divTechno
+				display: flex
+				flex-wrap: wrap
+				justify-content: center
+
+		#a-propos
+			div#list-jobs
+				display: flex
+				flex-direction: row
+				justify-content: center
+				align-content: flex-start
+				flex-wrap: wrap
 
 @media screen and (min-width: 992px)
 	header, footer
