--- a/sass/style.sass
+++ b/sass/style.sass
@@ -58,6 +58,9 @@ header
 		justify-content: center
 		align-content: center
 		align-items: center
+		img#logo
+			width: 100%
+			height: 100%
 		h1
 			display: none
 
@@ -365,8 +368,7 @@ footer
 
 /* Pour les écrans supérieur à 375 px*/
 @media screen and (min-width: 576px)
-
-//@media screen and (min-width: 768px)
+@media screen and (min-width: 768px)
 	header
 		background-color: $jaune
 		display: flex
@@ -384,19 +386,20 @@ footer
 		position: fixed
 		top: 0px
 		left: 100px
-		height: fit-content
+		height: $height-header
 		width: 100%
 		z-index: 1000
 		div#menu-close
 			display: none
-		ul
+		ul#main-menu
 			display: flex
 			flex-direction: row
 			font-size: 16px
 			img
-
 				height: 20px
 				width: 20px
+			p
+				font-size: 1rem
 	main
 		#technologies
 			div#divTechno
