--- a/sass/style.css
+++ b/sass/style.css
@@ -76,6 +76,10 @@ header div {
   align-content: center;
   align-items: center;
 }
+header div img#logo {
+  width: 100%;
+  height: 100%;
+}
 header div h1 {
   display: none;
 }
@@ -182,8 +186,8 @@ main section#accueil h2 {
 }
 main section#accueil p {
   width: 80%;
-  text-align: justify;
-  padding: 20px;
+  text-align: center;
+  padding: 5px 20px;
   font-size: 1.5rem;
 }
 main section#a-propos {
@@ -355,24 +359,26 @@ main section#contact {
   flex-direction: column;
 }
 main section#contact p {
-  padding: 1rem;
+  padding: 0.5rem;
 }
 main section#contact form {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin: 2rem;
+  margin: 0.5rem;
 }
 main section#contact form label {
-  padding: 1rem 0.5rem;
+  padding: 0.5rem 0.5rem;
 }
 main section#contact form input {
   padding: 0.5rem 1rem;
+  border-radius: 8px;
 }
 main section#contact form textarea {
+  border-radius: 8px;
   font-size: 1rem;
   padding: 0.5rem 0.5rem;
-  height: 200px;
+  height: 150px;
 }
 main section#contact form button {
   color: #ffffff;
@@ -389,11 +395,6 @@ footer {
 }
 
 /* Pour les écrans supérieur à 375 px*/
-@media screen and (min-width: 576px) {
-  header, footer {
-    background-color: #0477BF;
-  }
-}
 @media screen and (min-width: 768px) {
   header {
     background-color: #F2C335;
@@ -407,31 +408,40 @@ footer {
     right: 10px;
   }
   nav {
-    background-color: rgba(255, 255, 255, 0);
     display: flex;
     justify-content: space-between;
     position: fixed;
     top: 0px;
     left: 100px;
-    height: -moz-fit-content;
-    height: fit-content;
+    height: 10vh;
     width: 100%;
     z-index: 1000;
   }
   nav div#menu-close {
     display: none;
   }
-  nav ul {
+  nav ul#main-menu {
     display: flex;
     flex-direction: row;
+    font-size: 16px;
   }
-  nav ul img {
-    height: 25px;
-    width: 25px;
+  nav ul#main-menu img {
+    height: 20px;
+    width: 20px;
   }
-}
-@media screen and (min-width: 992px) {
-  header, footer {
-    background-color: #D94423;
+  nav ul#main-menu p {
+    font-size: 1rem;
+  }
+  main #technologies div#divTechno {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  main #a-propos div#list-jobs {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: flex-start;
+    flex-wrap: wrap;
   }
 }/*# sourceMappingURL=style.css.map */
