image projet Gene pass

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -264,6 +264,7 @@ main
 					height: $w-logo-techno-card
 
 				img
+					object-fit: contain
 					width: $w-image-projet-card
 					height: $h-image-projet-card
 					border-radius: 20px
