--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -12,7 +12,10 @@ $radius-card: 8px
 $svg-width: 25px
 $svg-height: 25px
 
-$height-header: 15vh
+$height-header: 10vh
+
+$w-logo: 32px
+$h-logo: 32px
 
 $w-logo-techno-card: 5vh
 $h-logo-techno-card: 5vh
