--- a/sass/style.sass
+++ b/sass/style.sass
@@ -59,8 +59,8 @@ header
 		align-content: center
 		align-items: center
 		img#logo
-			width: 100%
-			height: 100%
+			width: $w-logo
+			height: $h-logo
 		h1
 			display: none
 
@@ -98,7 +98,6 @@ nav
 
 	display: none
 	background-color: $jaune
-
 	position: fixed
 	top: 0px
 	left: 0px
@@ -148,7 +147,7 @@ main
 		/*border-bottom: 2px solid rgba(250, 250 , 250, 1)*/
 
 	section#accueil
-
+		height: fit-content
 		background-image: linear-gradient(rgba(51, 51, 51, 0.9), rgba(51, 51, 51, 1)),url(/assets/imgs/javascriptcode.jpg)
 		background-position: center
 		display: flex
@@ -168,7 +167,7 @@ main
 
 		p
 			width: 80%
-			text-align: center
+
 			padding: 5px 20px
 			font-size: 1.5rem
 
@@ -209,7 +208,7 @@ main
 			border-radius: $radius-card
 			border: 2px solid $orange
 			color: $noir
-			height: 100%
+			height: 10%
 			width: 300px
 			margin: 0.5rem
 			padding: 0.5rem
@@ -223,9 +222,11 @@ main
 				padding: 0px
 
 			ul
+
 				display: flex
-				list-style-type: none
 				flex-direction: column
+				list-style-type: none
+
 		.open
 
 		.close
@@ -286,15 +287,11 @@ main
 					margin: 0.5rem
 					text-decoration: none
 
-	section#competences
-		height: fit-content
-
 	section#technologies
-
+		height: fit-content
 		display: flex
 		flex-direction: column
 		align-items: center
-		height: fit-content
 
 		.card-tech
 			background-color: $blanc
@@ -368,6 +365,7 @@ footer
 
 /* Smartphone */
 @media screen and (min-width: 576px)
+
 /*Smartphone Paysage*/
 @media screen and (min-width: 768px)
 	header
@@ -375,10 +373,18 @@ footer
 		display: flex
 		flex-direction: row
 		justify-content: space-between
+		height: 15vh
 		div#menu-burger
 			display: none
 			position: relative
 			right: 10px
+		div img#logo
+			display: flex
+			flex-direction: column
+			align-items: center
+			width: 10vh
+			height: 10vh
+
 	nav
 
 		display: flex
@@ -386,7 +392,7 @@ footer
 		position: fixed
 		top: 0px
 		left: 100px
-		height: $height-header
+		height: 15vh
 		width: 100%
 		z-index: 1000
 		div#menu-close
@@ -394,6 +400,7 @@ footer
 		ul#main-menu
 			display: flex
 			flex-direction: row
+
 			font-size: 16px
 			img
 				height: 20px
@@ -420,4 +427,5 @@ footer
 @media screen and (min-width: 991px)
 
 @media screen and (orientation: landscape)
+
 	/* Styles pour les écrans en mode paysage */
