update card-job ul

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -57,7 +57,7 @@ header
 		display: flex
 		justify-content: center
 		align-content: center
-		align-items: center
+		//align-items: center
 		img#logo
 			width: $w-logo
 			height: $h-logo
@@ -223,7 +223,7 @@ main
 
 			ul
 
-				display: flex
+				display: none
 				flex-direction: column
 				list-style-type: none
 
