--- a/sass/style.sass
+++ b/sass/style.sass
@@ -184,7 +184,8 @@ main
 			display: flex
 			flex-direction: row
 			align-items: flex-start
-
+		&:hover
+			cursor: pointer
 		.year
 			color: $orange
 			font-size: 1rem
