user-select css

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -184,6 +184,7 @@ main
 			display: flex
 			flex-direction: row
 			align-items: flex-start
+			user-select: none
 		&:hover
 			cursor: pointer
 		.year
