--- a/sass/style.sass
+++ b/sass/style.sass
@@ -234,13 +234,17 @@ main
 		.close
 
 	section#projets
+		display: grid
+		grid-template-columns: 1fr
+		grid-gap: 10px
 
 		height: fit-content
 
 		div#article-projet
-			display: flex
-			flex-wrap: wrap
-			justify-content: center
+
+			// display: flex
+			// flex-wrap: wrap
+			// justify-content: center
 			color: $noir
 
 			article
