--- a/sass/_section_projets.sass
+++ b/sass/_section_projets.sass
@@ -1,5 +1,6 @@
 @import "_variables.sass"
 section#projets
+    background-color: blue
     height: fit-content
     display: flex
     flex-direction: column
