--- a/sass/_section_apropos.sass
+++ b/sass/_section_apropos.sass
@@ -12,6 +12,12 @@ section#a-propos
         grid-gap: 10px
         justify-items: center
 
+        .flex-col-center
+
+            display: flex
+            flex-direction: column
+            align-items: center
+
         .box
             display: flex
             flex-direction: row
