--- a/sass/style.sass
+++ b/sass/style.sass
@@ -139,8 +139,8 @@ nav
 
 				img
 
-					width: 2rem
-					height: 2rem
+					width: 1.5rem
+					height: 1.5rem
 
 			p
 				font-size: 1.5rem
@@ -212,8 +212,7 @@ footer
 
 	nav
 		display: flex
-		justify-content: space-between
-		align-items: flex-end
+		justify-content: center
 		position: fixed
 		top: 0px
 		left: 100px
@@ -225,8 +224,10 @@ footer
 		ul#main-menu
 			display: flex
 			flex-direction: row
-
+			justify-content: space-between
+			align-items: flex-end
 			font-size: 16px
+			width: 100%
 			img
 				height: 20px
 				width: 20px
