--- a/sass/_section_apropos.sass
+++ b/sass/_section_apropos.sass
@@ -12,6 +12,16 @@ section#a-propos
         grid-gap: 10px
         justify-items: center
 
+        .btnCompagny
+            background-color: #333
+            display: flex
+            flex-direction: row
+            justify-content: space-between
+
+            button
+                width: 30px
+                height: 30px
+
         .flex-col-center
 
             display: flex
@@ -23,6 +33,7 @@ section#a-propos
             flex-direction: row
             align-items: flex-start
             user-select: none
+
         &:hover
             cursor: pointer
 
