--- a/sass/_section_apropos.sass
+++ b/sass/_section_apropos.sass
@@ -12,16 +12,6 @@ section#a-propos
         grid-gap: 10px
         justify-items: center
 
-        .btnCompagny
-            background-color: #333
-            display: flex
-            flex-direction: row
-            justify-content: space-between
-
-            button
-                width: 30px
-                height: 30px
-
         .flex-col-center
 
             display: flex
@@ -65,6 +55,23 @@ section#a-propos
             margin: 0.5rem
             padding: 0.5rem
 
+            div.btnCompagny
+                display: flex
+                flex-direction: row
+                justify-content: space-between
+
+                img
+                    object-fit: cover
+                    width: 100%
+                    height: 100%
+
+                .btnjobs
+                    display: flex
+                    flex-direction: column
+                    align-items: center
+                    align-content: center
+                    width: 30px
+                    height: 30px
             h3
                 font-size: 1rem
                 color: $orange
@@ -74,7 +81,6 @@ section#a-propos
                 padding: 0px
 
             ul
-
                 display: none
                 flex-direction: column
                 list-style-type: none
