--- a/sass/style.sass
+++ b/sass/style.sass
@@ -237,7 +237,7 @@ footer
 	main
 
 		#a-propos
-			div#list-jobs
+			ul#list-jobs
 				// display: flex
 				// flex-direction: row
 				// justify-content: center
@@ -266,7 +266,7 @@ footer
 	main
 
 		#a-propos
-			div#list-jobs
+			ul#list-jobs
 				// display: flex
 				// flex-direction: row
 				// justify-content: center
